# chemical

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ChemicalVS.cpp  ChemicalVS.h  Compiler.cpp  DependencyUtil.h  Interpreter.cpp  LICENSE  LPG-language-server.cpp  Lexi.h  Main.cpp  README.md  SOURCE.md  SearchPolicy.h  SourceProvider.cpp  SourceProvider.h  StreamPosition.h  StreamSourceProvider.h  build.sh  code.cpp  code.h  file.txt  main.cpp  release.sh  run.sh
.github/: FUNDING.yml
.github/workflows/: build-and-release.yml  build-on-release.yml  compile-hello-world.yml  compile-tests.yml  docker-build.yml
ast/base/: ASTAllocator.cpp  ASTAllocator.h  ASTAny.cpp  ASTAny.h  ASTAnyKind.h  ASTBuilder.h  ASTNode.cpp  ASTNode.h  ASTNodeKind.h  ASTUnit.h  AccessSpecifier.h  AnnotableNode.h  Annotation.cpp  Annotation.h  AnnotationKind.h  AnnotationParent.h  BaseType.cpp  BaseType.h  BaseTypeKind.h  BatchAllocator.h  ChainPart.h  ChainValue.h  ChildResolution.h  ChildResolutionNodes.h  DebugCast.h  ExtendableAnnotableNode.h  ExtendableBase.cpp  ExtendableBase.h  ExtendableMembersContainerNode.h  GlobalInterpretScope.cpp  GlobalInterpretScope.h  IntNTypeKind.h  InterfaceBits.h  InterpretScope.cpp  InterpretScope.h  InterpretValue.h  Interpretable.h  LocatedIdentifier.h  LoopASTNode.h  MalformedInput.h  (+9 more)
ast/statements/: AccessChainNode.h  AliasStmt.cpp  AliasStmt.h  Assignment.cpp  Assignment.h  Break.cpp  Break.h  ChildrenMapNode.h  Comment.h  Continue.cpp  Continue.h  DeallocStmt.h  DeleteStmt.cpp  DeleteStmt.h  DestructStmt.cpp  DestructStmt.h  EmbeddedNode.h  Export.h  Import.cpp  Import.h  IncDecNode.h  MacroValueStatement.h  PackageDefinition.h  PatternMatchExprNode.h  PlacementNewNode.h  ProvideStmt.cpp  ProvideStmt.h  Return.cpp  Return.h  SwitchStatement.cpp  SwitchStatement.h  SymResNode.h  ThrowStatement.cpp  ThrowStatement.h  Typealias.cpp  Typealias.h  Unreachable.h  UnresolvedDecl.h  Using.cpp  UsingStmt.h  (+3 more)
ast/structures/: BaseDefMember.h  BaseFunctionParam.h  BaseFunctionType.cpp  BaseFunctionType.h  BaseGenericDecl.h  BlockScope.h  CapturedVariable.h  ComptimeBlock.cpp  ComptimeBlock.h  DoWhileLoop.cpp  DoWhileLoop.h  EnumDecl.cpp  EnumDeclaration.h  EnumMember.h  ExtensionFuncReceiver.h  ExtensionFunction.cpp  ExtensionFunction.h  FileScope.h  ForInLoop.h  ForLoop.cpp  ForLoop.h  FunctionDecl.cpp  FunctionDeclaration.h  FunctionParam.h  GenericFuncDecl.cpp  GenericFuncDecl.h  GenericImplDecl.cpp  GenericImplDecl.h  GenericInterfaceDecl.cpp  GenericInterfaceDecl.h  GenericMembersDecl.h  GenericStructDecl.cpp  (+48 more)
cmake/: FeatureFlags.cmake  Findclang.cmake  Findlld.cmake  Findllvm.cmake  clang-mingw-toolchain.cmake
common/: DiagSeverity.h  Diagnostic.cpp  Diagnostic.h  Location.h  Position.h
compiler/: ASTCompiler.cpp  ASTCompiler.h  ASTDiag.h  ASTDiagnoser.cpp  ASTDiagnoser.h  ASTLinker.cpp  ASTLinker.h  ASTPointer.h  ASTProcessor.cpp  ASTProcessor.h  ASTProcessorOptions.h  Branch.cpp  ClangCodegen.h  ClangMain.cpp  Codegen.cpp  Codegen.h  CodegenEmitterOptions.h  CodegenOptions.h  IGCompiler.cpp  IGCompiler.h  InvokeExtension.cpp  InvokeUtils.h  JitInterpret.cpp  Linker.cpp  LinkerUtils.h  ModuleOptionRegistry.cpp  ModuleOptionRegistry.h  Object.cpp  Operation.cpp  OutputMode.h  PrimitiveTypeMap.h  PrimitiveTypemap.cpp  ReleaseMode.h  SanitizerOptions.h  SelfInvocation.cpp  SelfInvocation.h  SymbolResolver.cpp  SymbolResolver.h  TranslateC.cpp  Type.cpp  (+9 more)
config/: CompilerOptions.cmake
cst/: CSTConvert.cpp  CSTDiagnoser.cpp  CSTToken.cpp  LocationManager.cpp  LocationManager.h  SourceLocation.h
interpreter/: Interpreter.h
lexer/: CompilerBinder.cpp  Impls.h  LexConfig.h  LexUnit.h  Lexer.cpp  Lexer.h  Lexi.cpp  Lexi.h  MultiStrAllocator.h  Token.h  TokenType.h
parser/: CBI.h  CompilerBinder.cpp  Lexer.h  Lexi.cpp  Lexi.h  Parser.cpp  Parser.h  Persi.cpp  Persi.h
preprocess/: 2cASTVisitor.cpp  2cASTVisitor.h  BaseSymbolResolver.h  CSTSymbolResolver.cpp  CSTSymbolResolver.h  ImportGraphMaker.cpp  ImportGraphMaker.h  ImportGraphVisitor.h  ImportPathHandler.cpp  ImportPathHandler.h  RepresentationVisitor.cpp  RepresentationVisitor.h  ShrinkingVisitor.cpp  ShrinkingVisitor.h  SourceVerifier.h  SourceVerify.cpp  StringViewHashEqual.h  ToCTranslator.cpp  ToCTranslator.h
sample/: compiled.ll  compiler.ch  convert_test.ch  crash.ch  interpreter.ch  move-pass-test.ch  perf-test.ch  successful.ch  test.ch  test.ll
scripts/: build.sh  configure.sh  debug-pkg.sh  download.ps1  download.sh  libtcc.sh  llvm.sh  mingw-build.sh  mingw-configure.sh  mingw-toolchain.sh  msvc_env.sh  release.sh  run-tests.ps1  run-tests.sh  setup-tcc.sh  setup.sh  test.sh  tui.sh
server/: CompletionItemAnalyzer.cpp  CompletionItemAnalyzer.h  FileTracker.cpp  FileTracker.h  FoldingRangeAnalyzer.cpp  FoldingRangeAnalyzer.h  Importer.cpp  LspSemanticTokens.cpp  LspSemanticTokens.h  PrintUtils.cpp  ScopeAnalyzer.cpp  ScopeAnalyzer.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticLexer.cpp  SemanticLexer.h  SemanticLinker.cpp  SemanticLinker.h  SemanticTokensAnalyzer.cpp  SemanticTokensAnalyzer.h  WorkspaceManager.cpp  WorkspaceManager.h
std/: chem_span.h  chem_string.cpp  chem_string.h  chem_string_view.h  chem_string_view_fast.h  common.h  except.cpp  except.h  hybrid_ptr.h  small_vector.h  unordered_map.h
stream/: FileInputSource.h  InputSource.cpp  InputSource.h  NewFileInputSource.h  NewInputSource.cpp  NewInputSource.h  SourceProvider.h  SourceProviderImpl.cpp  StreamPosition.h  StreamSourceProvider.h  StreamStructValue.cpp  StreamStructValue.h  StringInputSource.h
tests/: move-pass-test.ch  move-reference_test.ch
typecheck/: TypeChecker.cpp  TypeChecker.h
utils/: Benchmark.cpp  Benchmark.h  CmdUtils.cpp  CmdUtils.h  CmdUtils2.h  Environment.h  FileUtils.cpp  FileUtils.h  JsonUtils.cpp  JsonUtils.h  Lexi.cpp  Lexi.h  LibTccTest.cpp  PathUtils.h  PrintUtils.cpp  PrintUtils.h  ProcessUtils.h  StrUtils.cpp  StrUtils.h  Utils.cpp  Utils.h  ValueAndOperatorStack.h  Version.h  Version.h.in  functionalfwd.h  inline_attr.h
(+2250 files in other folders)
